# yate

./: .clang-format  .gitignore  .ignore  CMakeLists.txt  EmbedFile.cmake  README.md  imgui.ini
.github/workflows/: build.yml
include/: opengl.hpp  stb_rect_pack.h
res/shaders/: fragment.frag  shader.frag  shader.vert  text.frag  text.vert  vertex.vert
scripts/: color_test  colortest  colortest.sh
scripts/fetch_colors/: main.py
src/: application.cpp  application.hpp  debug_ui.cpp  debug_ui.hpp  error.cpp  error.hpp  index_buffer.cpp  index_buffer.hpp  main.cpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  shader_manager.cpp  shader_manager.hpp  utils.cpp  utils.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/rendering/: atlas.cpp  atlas.hpp  colors.hpp  font.cpp  font.hpp  index_buffer.cpp  index_buffer.hpp  mesh.cpp  mesh.hpp  opengl.cpp  opengl.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  text_renderer.cpp  text_renderer.hpp  types.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp
src/terminal/: codes.hpp  colors.hpp  constants.hpp  csi_idents.hpp  csi_parser.cpp  csi_parser.hpp  esc_parser.cpp  esc_parser.hpp  event_handler.cpp  event_handler.hpp  input_handler.cpp  input_handler.hpp  nav_keys.cpp  nav_keys.hpp  osc_parser.cpp  osc_parser.hpp  parser.cpp  parser.hpp  parser_setup.cpp  parser_setup.hpp  terminal.cpp  terminal.hpp  terminal_buffer.cpp  terminal_buffer.hpp  thread_safe_queue.hpp  types.hpp  unicode.cpp  unicode.hpp
src/tests/: osc.cpp  terminal_buffer.cpp
